--- a/sofarsolar/Dockerfile
+++ b/sofarsolar/Dockerfile
@@ -3,8 +3,7 @@ FROM python:3.10
 ADD inverter /inverter
 ADD run.sh /
 
-RUN pip install paho-mqtt anyconfig
-
-CMD [ "chmod 777 run.sh" ]
+RUN pip install paho-mqtt anyconfig \
+    && chmod +x /run.sh
 
 CMD [ "/run.sh" ]
